--- a/configs/wood_local_coreset.yml
+++ b/configs/wood_local_coreset.yml
@@ -10,12 +10,12 @@ pretrained_model_path: null # checkpoints/resnet18.pth
 # dataset arguments
 batch_size: 1
 num_workers: 0
-category: &category tyre
+category: &category wood
 resize: [256, 256]
 crop_size: [256, 256]
-data_path: /data/data_wbw/data/cropped_tyre/1-按规格显著病茨/7.00R16-8PR[CR908+A]朝阳无内 AA/train_2000/1 # /data/data_wbw/data/cropped_tyre/006163123012900_3/train/ # /data2/chen/spec10k/006163123012900
+data_path: /data/data_wbw/data/mvtec_anomaly_detection/wood/train/good/
 save_path: [output/, *model, _, *backbone, _, *category]
-save_name: &save_name 7.00R16-8PR_2000_1.pth
+save_name: &save_name wood.pth
 
 # train arguments
 do_eval: False  # After training, whether to eval model;
@@ -25,6 +25,6 @@ save_pic: True # Whether to save one output example picture in val and predict;
 model_path: [output/, *model, _, *backbone, _, *category, /, *save_name]
 
 # predict arguments
-img_path: /data/data_wbw/data/cropped_tyre/1-按规格显著病茨/7.00R16-8PR[CR908+A]朝阳无内 AA/val_2000/1 #48.jpg # /data/data_wbw/data/cropped_tyre/006163123012900_3/test/A011141165_0.jpg
-result_path: [output/, *model, _, *backbone, _, *category, '/7.00R16-8PR[CR908+A]朝阳无内 AA_70_2000_1']
-threshold: 1.5
+img_path: /data/data_wbw/data/mvtec_anomaly_detection/wood/test/hole
+result_path: [output/, *model, _, *backbone, _, *category, '/hole']
+threshold: 2.2
