--- a/configs/patchcore.yml
+++ b/configs/patchcore.yml
@@ -1,24 +1,24 @@
 # common arguments
-device: cuda:2
+device: cuda:0
 seed: 3
 model: &model patchcore
 backbone: &backbone resnet18  # Support resnet18, resnet50, wide_resnet50_2
 method: coreset # projection method, one of [sample, ortho, svd_ortho, gaussian, coreset]
 k: 10  # using feature channels
-pretrained_model_path: checkpoints/resnet18.pth
+pretrained_model_path: null # checkpoints/resnet18.pth
 
 # dataset arguments
 batch_size: 1
 num_workers: 0
-category: &category wood
+category: &category cable
 resize: [256, 256]
 crop_size: [256, 256]
-data_path: /data/data_wbw/data/mvtec_anomaly_detection/wood/train/good/
+data_path: /data/data_wbw/data/mvtec_anomaly_detection/cable/train/good/
 save_path: [output/, *model, _, *backbone, _, *category]
-save_name: &save_name tyre.pth
+save_name: &save_name cable.pth
 
 # train arguments
-do_eval: True  # After training, whether to eval model;
+do_eval: true  # After training, whether to eval model;
 
 # val and predict arguments
 test_path: /data/data_wbw/data/mvtec_anomaly_detection/
@@ -26,6 +26,6 @@ save_pic: True # Whether to save one output example picture in val and predict;
 model_path: [output/, *model, _, *backbone, _, *category, /, *save_name]
 
 # predict arguments
-img_path: /data/data_wbw/data/mvtec_anomaly_detection/wood/test/good
-result_path: [output/, *model, _, *backbone, _, *category, '/good']
-threshold: 0.5
+img_path: /data/data_wbw/data/mvtec_anomaly_detection/leather/test/hole
+result_path: [output/, *model, _, *backbone, _, *category, '/hole']
+threshold: 2.2
