--- a/configs/local_coreset.yml
+++ b/configs/local_coreset.yml
@@ -1,9 +1,9 @@
 # common arguments
 device: cuda:0
 seed: 3
-model: &model local_coreset
+model: &model patchcore
 backbone: &backbone resnet18  # Support resnet18, resnet50, wide_resnet50_2
-method: local_coreset # projection method, one of [sample, ortho, svd_ortho, gaussian, coreset]
+method: &method local_coreset # projection method, one of [sample, ortho, svd_ortho, gaussian, coreset]
 k: 10  # using feature channels
 pretrained_model_path: null # checkpoints/resnet18.pth
 
@@ -14,7 +14,7 @@ category: &category cable
 resize: [256, 256]
 crop_size: [256, 256]
 data_path: /data/data_wbw/data/mvtec_anomaly_detection/cable/train/good/
-save_path: [output/, *model, _, *backbone, _, *category]
+save_path: [output/, *method, _, *backbone, _, *category]
 save_name: &save_name cable.pth
 
 # train arguments
@@ -23,7 +23,7 @@ do_eval: True  # After training, whether to eval model;
 # val and predict arguments
 test_path: /data/data_wbw/data/mvtec_anomaly_detection/
 save_pic: True # Whether to save one output example picture in val and predict;
-model_path: [output/, *model, _, *backbone, _, *category, /, *save_name]
+model_path: [output/, *method, _, *backbone, _, *category, /, *save_name]
 
 # predict arguments
 img_path: /data/data_wbw/data/mvtec_anomaly_detection/leather/test/hole
