--- a/configs/tyre_local_coreset.yml
+++ b/configs/tyre_local_coreset.yml
@@ -1,10 +1,10 @@
 # common arguments
 device: cuda:0
 seed: 3
-model: &model local_coreset
+model: &model patchcore
 backbone: &backbone resnet18  # Support resnet18, resnet50, wide_resnet50_2
-method: local_coreset # projection method, one of [sample, ortho, svd_ortho, gaussian, coreset]
-k: 10  # using feature channels
+method: &method local_coreset # projection method, one of [sample, ortho, svd_ortho, gaussian, coreset]
+k: 2  # using feature channels
 pretrained_model_path: null # checkpoints/resnet18.pth
 
 # dataset arguments
@@ -13,18 +13,18 @@ num_workers: 0
 category: &category tyre
 resize: [256, 256]
 crop_size: [256, 256]
-data_path: /data/data_wbw/data/cropped_tyre/1-按规格显著病茨/7.00R16-8PR[CR908+A]朝阳无内 AA/train_2000/1 # /data/data_wbw/data/cropped_tyre/006163123012900_3/train/ # /data2/chen/spec10k/006163123012900
-save_path: [output/, *model, _, *backbone, _, *category]
-save_name: &save_name 7.00R16-8PR_2000_1.pth
+data_path: /data/data_wbw/data/cropped_tyre/1-按规格显著病茨/7.00R16-14PR[AZ630]朝阳无内/train_4000/1 # /data/data_wbw/data/cropped_tyre/006163123012900_3/train/ # /data2/chen/spec10k/006163123012900
+save_path: [output/, *method, _, *backbone, _, *category]
+save_name: &save_name 7.00R16-14PR_4000_1.pth
 
 # train arguments
 do_eval: False  # After training, whether to eval model;
 
 # val and predict arguments
 save_pic: True # Whether to save one output example picture in val and predict;
-model_path: [output/, *model, _, *backbone, _, *category, /, *save_name]
+model_path: [output/, *method, _, *backbone, _, *category, /, *save_name]
 
 # predict arguments
-img_path: /data/data_wbw/data/cropped_tyre/1-按规格显著病茨/7.00R16-8PR[CR908+A]朝阳无内 AA/val_2000/1 #48.jpg # /data/data_wbw/data/cropped_tyre/006163123012900_3/test/A011141165_0.jpg
-result_path: [output/, *model, _, *backbone, _, *category, '/7.00R16-8PR[CR908+A]朝阳无内 AA_70_2000_1']
+img_path: /data/data_wbw/data/cropped_tyre/1-按规格显著病茨/7.00R16-14PR[AZ630]朝阳无内/val_4000/1 #48.jpg # /data/data_wbw/data/cropped_tyre/006163123012900_3/test/A011141165_0.jpg
+result_path: [output/, *method, _, *backbone, _, *category, '/7.00R16-14PR[AZ630]朝阳无内_val_4000_1']
 threshold: 1.5
