--- a/configs/padim.yml
+++ b/configs/padim.yml
@@ -8,12 +8,12 @@ pretrained_model_path: checkpoints/resnet18.pth
 # dataset arguments
 batch_size: 1
 num_workers: 0
-category: &category leather
+category: &category wood
 resize: [256, 256]
 crop_size: [256, 256]
-data_path: /data/data_wbw/data/mvtec_anomaly_detection/leather/train/good/
+data_path: /data/data_wbw/data/mvtec_anomaly_detection/wood/train/good/
 save_path: [output/, *model, _, *backbone, _, *category]
-save_name: &save_name leather.pth
+save_name: &save_name wood.pth
 
 # train arguments
 do_eval: True  # After training, whether to eval model;
