--- a/configs/local_coreset.yml
+++ b/configs/local_coreset.yml
@@ -2,7 +2,7 @@
 device: cuda:0
 seed: 3
 model: &model patchcore
-backbone: &backbone resnet18  # Support resnet18, resnet50, wide_resnet50_2
+backbone: &backbone wide_resnet50_2  # Support resnet18, resnet50, wide_resnet50_2
 method: &method local_coreset # projection method, one of [sample, ortho, svd_ortho, gaussian, coreset]
 k: 10  # using feature channels
 pretrained_model_path: null # checkpoints/resnet18.pth
