--- a/configs/patchcore.yml
+++ b/configs/patchcore.yml
@@ -1,8 +1,8 @@
 # common arguments
-device: cuda:0
+device: cuda:1
 seed: 3
 model: &model patchcore
-backbone: &backbone resnet18  # Support resnet18, resnet50, wide_resnet50_2
+backbone: &backbone wide_resnet50_2  # Support resnet18, resnet50, wide_resnet50_2
 method: coreset # projection method, one of [sample, ortho, svd_ortho, gaussian, coreset]
 k: 10  # using feature channels
 pretrained_model_path: null # checkpoints/resnet18.pth
@@ -10,12 +10,12 @@ pretrained_model_path: null # checkpoints/resnet18.pth
 # dataset arguments
 batch_size: 1
 num_workers: 0
-category: &category hazelnut
+category: &category cable
 resize: [256, 256]
 crop_size: [256, 256]
-data_path: /data/data_wbw/data/mvtec_anomaly_detection/hazelnut/train/good/
+data_path: /data/data_wbw/data/mvtec_anomaly_detection/cable/train/good/
 save_path: [output/, *model, _, *backbone, _, *category]
-save_name: &save_name hazelnut.pth
+save_name: &save_name cable.pth
 
 # train arguments
 do_eval: true  # After training, whether to eval model;
