--- a/configs/tyre_patchcore.yml
+++ b/configs/tyre_patchcore.yml
@@ -14,9 +14,9 @@ num_workers: 0
 category: &category tyre
 resize: [256, 256]
 crop_size: [256, 256]
-data_path: /data/data_wbw/data/cropped_tyre/1-按规格显著病茨/12.00R20-18PR[CR926+]ENTDA/train_2000/1 # /data/data_wbw/data/cropped_tyre/006163123012900_3/train/ # /data2/chen/spec10k/006163123012900
+data_path: /data/data_wbw/data/cropped_tyre/2-常用规格/6.50R16-12PR[CR926]朝阳/train_2000/1 # /data/data_wbw/data/cropped_tyre/006163123012900_3/train/ # /data2/chen/spec10k/006163123012900
 save_path: [output/, *model, _, *backbone, _, *category]
-save_name: &save_name 12.00R20-18PR[CR926+]ENTDA_2000_1.pth
+save_name: &save_name 6.50R16-12PR[CR926]_2000_1.pth
 
 # train arguments
 do_eval: False  # After training, whether to eval model;
@@ -26,6 +26,6 @@ save_pic: True # Whether to save one output example picture in val and predict;
 model_path: [output/, *model, _, *backbone, _, *category, /, *save_name]
 
 # predict arguments
-img_path: /data/data_wbw/data/cropped_tyre/1-按规格显著病茨/12.00R20-18PR[CR926+]ENTDA/813_2000/1 #48.jpg # /data/data_wbw/data/cropped_tyre/006163123012900_3/test/A011141165_0.jpg
-result_path: [output/, *model, _, *backbone, _, *category, '/12.00R20-18PR[CR926+]ENTDA_813_2000_1']
-threshold: 1.5
+img_path: /data/data_wbw/data/cropped_tyre/2-常用规格/6.50R16-12PR[CR926]朝阳/val_2000/1 #48.jpg # /data/data_wbw/data/cropped_tyre/006163123012900_3/test/A011141165_0.jpg
+result_path: [output/, *model, _, *backbone, _, *category, '/6.50R16-12PR[CR926]朝阳_val_2000_1']
+threshold: 1.56
