--- a/configs/padim.yml
+++ b/configs/padim.yml
@@ -8,22 +8,22 @@ pretrained_model_path: null # checkpoints/resnet18.pth
 # dataset arguments
 batch_size: 1
 num_workers: 0
-category: &category transistor
+category: &category wood
 resize: [256, 256]
 crop_size: [256, 256]
-data_path: /data/data_wbw/data/mvtec_anomaly_detection/transistor/train/good/
+data_path: /data/data_wbw/data/mvtec_anomaly_detection/wood/train/good/
 save_path: [output/, *model, _, *backbone, _, *category]
-save_name: &save_name transistor.pth
+save_name: &save_name wood.pth
 
 # train arguments
 do_eval: True  # After training, whether to eval model;
 
 # val and predict arguments
 test_path: /data/data_wbw/data/mvtec_anomaly_detection/
-save_pic: True # Whether to save one output example picture in val and predict;
+save_pic: False # Whether to save one output example picture in val and predict;
 model_path: [output/, *model, _, *backbone, _, *category, /, *save_name]
 
 # predict arguments
-img_path: /data/data_wbw/data/mvtec_anomaly_detection/wood/test/color/000.png
-result_path: [output/, *model, _, *backbone, _, *category, '/color']
+img_path: /data/data_wbw/data/mvtec_anomaly_detection/wood/train/good/
+result_path: [output/, *model, _, *backbone, _, *category, '/good']
 threshold: 0.5
