--- a/configs/padim.yml
+++ b/configs/padim.yml
@@ -2,28 +2,28 @@
 device: cuda:1
 seed: 3
 model: &model padim
-backbone: &backbone wide_resnet50_2  # Support resnet18, resnet50, wide_resnet50_2
+backbone: &backbone resnet18  # Support resnet18, resnet50, wide_resnet50_2
 pretrained_model_path: null # checkpoints/resnet18.pth
 
 # dataset arguments
 batch_size: 1
 num_workers: 0
-category: &category wood
+category: &category capsule
 resize: [256, 256]
 crop_size: [256, 256]
-data_path: /data/data_wbw/data/mvtec_anomaly_detection/wood/train/good/
+data_path: /data/data_wbw/data/mvtec_anomaly_detection/capsule/train/good/
 save_path: [output/, *model, _, *backbone, _, *category]
-save_name: &save_name wood.pth
+save_name: &save_name capsule.pth
 
 # train arguments
 do_eval: True  # After training, whether to eval model;
 
 # val and predict arguments
 test_path: /data/data_wbw/data/mvtec_anomaly_detection/
-save_pic: False # Whether to save one output example picture in val and predict;
+save_pic: true # Whether to save one output example picture in val and predict;
 model_path: [output/, *model, _, *backbone, _, *category, /, *save_name]
 
 # predict arguments
-img_path: /data/data_wbw/data/mvtec_anomaly_detection/wood/train/good/
+img_path: /data/data_wbw/data/mvtec_anomaly_detection/capsule/test/poke/008.png
 result_path: [output/, *model, _, *backbone, _, *category, '/good']
-threshold: 0.5
+threshold: 9
