--- a/configs/patchcore.yml
+++ b/configs/patchcore.yml
@@ -2,10 +2,10 @@
 device: cuda:0
 seed: 3
 model: &model patchcore
-backbone: &backbone resnet101  # Support resnet18, resnet50, wide_resnet50_2
+backbone: &backbone resnet18  # Support resnet18, resnet50, wide_resnet50_2
 method: coreset # projection method, one of [sample, ortho, svd_ortho, gaussian, coreset]
 k: 10  # using feature channels
-pretrained_model_path: checkpoints/resnet101.pth # checkpoints/resnet18.pth
+pretrained_model_path: null # checkpoints/resnet18.pth
 
 # dataset arguments
 batch_size: 1
