--- a/configs/patchcore.yml
+++ b/configs/patchcore.yml
@@ -5,17 +5,17 @@ model: &model patchcore
 backbone: &backbone resnet18  # Support resnet18, resnet50, wide_resnet50_2
 method: coreset # projection method, one of [sample, ortho, svd_ortho, gaussian, coreset]
 k: 10  # using feature channels
-pretrained_model_path: null # checkpoints/resnet18.pth
+pretrained_model_path: checkpoints/resnet18_diffae.pth # null # checkpoints/resnet18.pth
 
 # dataset arguments
 batch_size: 1
 num_workers: 0
-category: &category capsule
+category: &category wood
 resize: [256, 256]
 crop_size: [256, 256]
-data_path: /data/data_wbw/data/mvtec_anomaly_detection/capsule/train/good/
+data_path: /data/data_wbw/data/mvtec_anomaly_detection/wood/train/good/
 save_path: [output/, *model, _, *backbone, _, *category]
-save_name: &save_name capsule.pth
+save_name: &save_name wood_diffae.pth
 
 # train arguments
 do_eval: true  # After training, whether to eval model;
@@ -26,6 +26,7 @@ save_pic: True # Whether to save one output example picture in val and predict;
 model_path: [output/, *model, _, *backbone, _, *category, /, *save_name]
 
 # predict arguments
-img_path: /data/data_wbw/data/mvtec_anomaly_detection/capsule/test/poke/008.png
-result_path: [output/, *model, _, *backbone, _, *category, '/hole']
-threshold: 1.52
+img_path: /data/data_wbw/data/mvtec_anomaly_detection/wood/test/good
+save_all: True
+result_path: [output/, *model, _, *backbone, _, *category, '/liquid']
+threshold: 2.68
